--- a/public/admin/assets/css/vertical-layout-light/style.css
+++ b/public/admin/assets/css/vertical-layout-light/style.css
@@ -34139,7 +34139,7 @@ div.tagsinput span.tag a {
   display: flex;
   -webkit-align-items: center;
   align-items: center;
-  white-space: nowrap;
+  white-space: normal;
   padding: 10px 35px 10px 35px;
   color: #484848;
   border-radius: 0px 20px 20px 0px;
