--- a/public/admin/assets/css/vertical-layout-light/style.css
+++ b/public/admin/assets/css/vertical-layout-light/style.css
@@ -30580,7 +30580,7 @@ dl li {
 .table td {
   vertical-align: middle;
   line-height: 1;
-  white-space: normal;
+  white-space: normal !important;
   padding: 1.125rem 1.375rem;
 }
 
